# code-signal-rs

./: .gitignore  Cargo.toml  NOTICE  README.md  building.yaml
data/: building.yaml
src/: app.rs  lib.rs  main.rs
src/apartments/: mod.rs  model.rs
src/bookshelf/: mod.rs
